--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Changelog Action
+        uses: TriPSs/conventional-changelog-action@v3.7.1
+        with:
+         github-token: ${{ secrets.CHANGELOG_RELEASE }}
+         output-file: "false"
       - name: create release
         uses: actions/create-release@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
         env:
           GITHUB_TOKEN: ${{ secrets.CHANGELOG_RELEASE }}
         with:
-          tag_name: v${{ github.run_number }}
-          release_name: Release v${{ github.run_number }}
+          tag_name: ${{ steps.changelog.outputs.tag }}
+          release_name: ${{ steps.changelog.outputs.tag }}
+          body: ${{ steps.changelog.outputs.clean_changelog }}
