--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,11 +9,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Changelog Action
+      - name: conventional Changelog Action
+        id: changelog
         uses: TriPSs/conventional-changelog-action@v3.7.1
         with:
-         github-token: ${{ secrets.CHANGELOG_RELEASE }}
-         output-file: "false"
+          github-token: ${{ secrets.CHANGELOG_RELEASE }}
+          output-file: "false"
       - name: create release
         uses: actions/create-release@v1
         if: ${{ steps.changelog.outputs.skipped == 'false' }}
