--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     name: Create Release
-    runs-on: [ play-0 ]
+    runs-on: ubuntu-latest
     steps:
       - uses: "hewa1303/action-automatic-releases@latest"
         with:
